[tool.poetry]
name = "valley_floor"
version = "0.1.0"
description = ""
authors = ["Arthur Koehl <avkoehl@ucdavis.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numba = "^0.61.2"
geopandas = "^1.1.1"
rioxarray = "^0.17.0"
scikit-image = "^0.25.2"
scipy = "^1.16.0"


[tool.poetry.group.dev.dependencies]
ipython = "^9.4.0"
matplotlib = "^3.10.3"
streamtools = { git = "ssh://git@github.com/avkoehl/streamtools.git", branch = "main" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
