[tool.poetry]
name = "valley_floor"
version = "0.1.0"
description = ""
authors = ["Arthur Koehl <avkoehl@ucdavis.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
numba = "^0.62.1"
geopandas = "^1.1.1"
rioxarray = "^0.19.0"
scikit-image = "^0.25.2"
scipy = "^1.16.0"
xarray = "^2025.7.0"
streamkit = { git = "ssh://git@github.com/avkoehl/streamkit.git", branch = "main" }
xarray-spatial = "^0.4.0"
dask = "^2025.10.0"

[tool.poetry.group.dev.dependencies]
ipython = "^9.4.0"
matplotlib = "^3.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
